--- a/src/views/layouts/default.njk
+++ b/src/views/layouts/default.njk
@@ -13,7 +13,7 @@
 
     <div class="govuk-width-container ">
 
-      <main class="govuk-main-wrapper " id="main-content">
+      <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing govuk-body" id="main-content" role="main">
 
         <div class="govuk-grid-row">
           {% include "partials/error_summary.njk" %}
