--- a/src/views/router_views/start/start.njk
+++ b/src/views/router_views/start/start.njk
@@ -1,6 +1,7 @@
 {% extends "layouts/default.njk" %}
 
 {% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/details/macro.njk" import govukDetails %}
 
 {% block main_content %}
 
@@ -13,6 +14,59 @@
       <li>cease a PSC</li>
       <li>add or remove a PSC statement</li>
     </ul>
+
+    {{ govukDetails({
+        summaryText: "What a PSC statement is",
+        text:"Your PSC register must contain information about all PSCs of the company.
+        If this is not possible, you must put a statement in your register to explain why this information is not available."
+    }) }}
+
+    <h2 class="govuk-heading-m">Before you start</h2>
+
+    <p class="govuk-body">You'll need:</p>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>to sign in to or create a Companies House account</li>
+        <li>the company number</li>
+        <li>the <a href="https://www.gov.uk/guidance/company-authentication-codes-for-online-filing" class="govuk-link">company authentication code</a></li>
+      </ul>
+
+    <h3 class="govuk-heading-s">What you'll need to add a person as a PSC</h3>
+
+    <p class="govuk-body">You'll need to tell us their:</p>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>name</li>
+        <li>date of birth</li>
+        <li>nationality</li>
+        <li>correspondence address and home address</li>
+        <li><a href="https://www.gov.uk/guidance/people-with-significant-control-pscs#identifying-your-psc" class="govuk-link">natures of control</a></li>
+        <li>notification date and the date the company's PSC register was updated with this information</li>
+    </ul>
+
+    {{ govukDetails({
+      summaryText: "What a PSC register is:",
+      text: "Companies are required to keep a PSC register. It must include the details of all individuals or companies that have significant control over the company."
+    }) }}
+
+    <p class="govuk-body">You'll also need to tell us whether the PSC has ever applied to <a href="https://www.gov.uk/guidance/applying-to-protect-your-personal-information-on-the-companies-house-register" class="govuk-link">protect personal information at Companies House</a>.</p>
+
+    <h3 class="govuk-heading-s">What you'll need to add a corporate body as a PSC</h3>
+
+    <p class="govuk-body">You'll need to tell us its:</p>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>name</li>
+        <li>registered office address</li>
+        <li>notification date and the date the company's PSC register was updated with this information</li>
+        <li>place of registration (UK or non-UK)</li>
+        <li>corporate body type</li>
+        <li>legal form and governing law</li>
+        <li>register the corporate body is entered in, if applicable</li>
+        <li>country of registration and registration number</li>
+        <li><a href="https://www.gov.uk/guidance/people-with-significant-control-pscs#identifying-your-psc" class="govuk-link">natures of control</a></li>
+    </ul>
+
+    <p class="govuk-body">A corporate body can also be known as a relevant legal entity (RLE).</p>
+
+
 
     {{ govukButton({
     text: "Start"
