--- a/src/views/partials/banner.njk
+++ b/src/views/partials/banner.njk
@@ -134,5 +134,5 @@
   </a>
 </div>
 <div class="govuk-header__content">
-  <a href="#" class="govuk-header__link govuk-header__link--service-name">Add, update and cease a person with significant control (PSC)</a>
+  <a href="#" class="govuk-header__link govuk-header__link--service-name">Cease a person with significant control (PSC)</a>
 </div>
